# mission

./: .gitignore  README.md
mission/code/: .env.example  3_so100_yolo_ee_follow.py  main_voice_robot.py  mic_level_monitor.py  pyproject.toml  script.sh  training-models-on-rocm.ipynb  vocal.py  voice_robot_settings.json
mission/code/assets/: demo_teleop.webm
mission/code/voice_robot/: __init__.py  robot_controller.py  voice_agent.py
mission/wandb/: README.md
