[project]
name = "code"
version = "0.1.0"
description = "Voice-controlled robot arm with YOLO tracking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
audio = [
    "simpleaudio>=1.0.4",  # Better audio playback
]
